Practica 05.1 MVVM 2: Agregar alerta y nueva pagina

--- a/MVVM_Implementacion_HACB_V2/MVVM_Implementacion_HACB_V2.csproj
+++ b/MVVM_Implementacion_HACB_V2/MVVM_Implementacion_HACB_V2.csproj
@@ -18,6 +18,17 @@
 
   <ItemGroup>
     <Folder Include="Modelo\" />
-    <Folder Include="Vista\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Vista\pagina1.xaml.cs">
+      <DependentUpon>pagina1.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Vista\pagina1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
