Práctica 1: MVVM: Implementar CollectionView

--- a/MVVM_Implementacion_HACB_V2/MVVM_Implementacion_HACB_V2.csproj
+++ b/MVVM_Implementacion_HACB_V2/MVVM_Implementacion_HACB_V2.csproj
@@ -17,16 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Modelo\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Vista\pagina1.xaml.cs">
       <DependentUpon>pagina1.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Vista\Page2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Vista\pagina1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
